@@ -1,6 +1,10 @@
 package ru.zinovev.online.store.dao;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
 import ru.zinovev.online.store.controller.dto.OrderDto;
@@ -24,7 +28,6 @@ import ru.zinovev.online.store.model.OrderDetails;
 import ru.zinovev.online.store.model.OrderShortDetails;
 import ru.zinovev.online.store.model.UserDetails;
 
-import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Function;
@@ -86,26 +89,35 @@ public class OrderDaoService {
                     .build();
         }).toList();
 
-        var updatedItems = items.stream().map(orderItem -> orderItem.toBuilder().order(order).build()).toList();
-        order.getItems().addAll(updatedItems);
+        //   var updatedItems = items.stream().map(orderItem -> orderItem.toBuilder().order(order).build()).toList();
+        order.getItems().addAll(items);
         var newOrd = orderRepository.save(order);
         cartRepository.delete(cart);
 
         return orderMapper.toOrderDetails(newOrd);
     }
 
-    public List<OrderDetails> getUserOrders(String publicUserId) {
-        return orderRepository.findByUserPublicUserIdOrderByCreatedAtAsc(publicUserId)
+    public Page<OrderDetails> getUserOrders(String publicUserId, Integer page, Integer limit) {
+        var pageable = PageRequest.of(page, limit);
+
+        var orders = orderRepository.findByUserPublicUserIdOrderByCreatedAtDesc(publicUserId, pageable);
+        var orderDetails = orders
                 .stream()
                 .map(orderMapper::toOrderDetails)
-                .collect(Collectors.toList());
+                .toList();
+        return new PageImpl<>(orderDetails, pageable, orders.getTotalElements());
     }
 
-    public List<OrderShortDetails> getAllOrders() {
-        return orderRepository.findAll()
+    public Page<OrderShortDetails> getAllOrders(Integer page, Integer limit) {
+        var sort = Sort.by(Sort.Direction.DESC, "createdAt");
+        var pageable = PageRequest.of(page, limit, sort);
+
+        var orders = orderRepository.findAll(pageable);
+        var orderDetails = orders
                 .stream()
                 .map(orderMapper::toOrderShortDetails)
-                .collect(Collectors.toList());
+                .toList();
+        return new PageImpl<>(orderDetails, pageable, orders.getTotalElements());
     }
 
     public Optional<OrderShortDetails> findOrderById(String publicOrderId) {
